[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Levels/ZenguinAI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/zenguin_sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.8867, 19.8472 )

[sub_resource type="Animation" id=2]
resource_name = "Dead"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 41 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Frozen"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 40 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Frozen"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Dead/node = SubResource( 6 )
states/Dead/position = Vector2( 418, -21 )
states/Frozen/node = SubResource( 7 )
states/Frozen/position = Vector2( 426, 245 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 325, 129 )
states/Walk/node = SubResource( 9 )
states/Walk/position = Vector2( 519, 129 )
transitions = [ "Idle", "Walk", SubResource( 10 ), "Walk", "Idle", SubResource( 11 ), "Frozen", "Idle", SubResource( 12 ), "Idle", "Frozen", SubResource( 13 ), "Idle", "Dead", SubResource( 14 ), "Walk", "Dead", SubResource( 15 ) ]
start_node = "Idle"
graph_offset = Vector2( -182, -109 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 11.7196, 10.6381 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0.5, 0.5 )

[node name="Zenguin" type="KinematicBody2D"]
position = Vector2( -1850, 500 )
script = ExtResource( 1 )

[node name="LivingCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11.513 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.52588e-05 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 5
hframes = 10
frame = 10

[node name="FloorRaycast" type="RayCast2D" parent="."]
position = Vector2( 23, 32 )
enabled = true
cast_to = Vector2( 0, 200 )
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )
anims/Frozen = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[node name="HorizontalRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, 11.513 )
enabled = true
cast_to = Vector2( -300, 0 )

[node name="HeadRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -10 )

[node name="DeadCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20.6829 )
shape = SubResource( 18 )
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 11.513 )
lifetime = 0.3
emission_shape = 2
emission_rect_extents = Vector2( 13, 20 )
gravity = Vector2( 0, 0 )
scale_amount = 8.4
scale_amount_random = 1.0
color_ramp = SubResource( 19 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
